test/files/neg/t2180.check
t2180.scala:3: error: type mismatch;
 found   : List[Any]
 required: List[Mxml]
    children.toList.flatMap ( e => {
                            ^
one error found
